; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_inet.c_mac_inpcb_label_update.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_inet.c_mac_inpcb_label_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.inpcb = type { i32 }

@inpcb_label_update = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_inpcb_label_update(%struct.socket* %0) #0 {
  %2 = alloca %struct.socket*, align 8
  %3 = alloca %struct.inpcb*, align 8
  store %struct.socket* %0, %struct.socket** %2, align 8
  %4 = load %struct.socket*, %struct.socket** %2, align 8
  %5 = call %struct.inpcb* @sotoinpcb(%struct.socket* %4)
  store %struct.inpcb* %5, %struct.inpcb** %3, align 8
  %6 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %7 = icmp ne %struct.inpcb* %6, null
  br i1 %7, label %8, label %19

8:                                                ; preds = %1
  %9 = load i32, i32* @inpcb_label_update, align 4
  %10 = load %struct.socket*, %struct.socket** %2, align 8
  %11 = load %struct.socket*, %struct.socket** %2, align 8
  %12 = getelementptr inbounds %struct.socket, %struct.socket* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %15 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %16 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @MAC_PERFORM(i32 %9, %struct.socket* %10, i32 %13, %struct.inpcb* %14, i32 %17)
  br label %19

19:                                               ; preds = %8, %1
  ret void
}

declare dso_local %struct.inpcb* @sotoinpcb(%struct.socket*) #1

declare dso_local i32 @MAC_PERFORM(i32, %struct.socket*, i32, %struct.inpcb*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
